--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          #flake8 . --count --select=E9,F63,F7,F82 --show-source -ignore=E111,E121,E126,E092 --statistics
+          flake8 . --count --select=E9,F63,F7,F82 --show-source -ignore=E111,E121,E126,E092 --statistics
           # exit-zero treats all errors as warnings.
           flake8 . --count --exit-zero --max-line-length=120 --ignore=E111,E121,E126,E092 --statistics
       - name: Run and collect coverage
